# longcat-sgpt

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
sgpt/: __init__.py  main.py
